src/components/Layout/Sections/style.module.less
@import '../../style/vars.less';

.section {
  padding: 5rem 1rem 10rem;
  position: relative;
  overflow: hidden;

  @media (max-width: @breakPointM) {
    padding: 3rem 1rem 5rem;
  }

  &Video {
    padding-bottom: 5rem;

    .sectionBody {
      position: relative;
    }

    @media (max-width: @breakPointM) {
      padding-top: 10rem;
      padding-bottom: 12rem;
    }
  }

  &Illustration {
    @media (min-width: @breakPointM) {
      padding: 8rem 1rem 8rem;
    }
  }

  &:nth-child(3n + 1):not(:only-child) {
    --bg-color: @yellow;
    --font-color: @red;
    --secondary-color: @pink;
    --text-on-secondary-color: @yellow;
    background: @yellow;
    color: @red;

    &.sectionNewsletter {
      background-image: url('./newsletter_red.svg');
    }
  }

  &:nth-child(3n + 2) {
    --bg-color: @red;
    --font-color: @greyBright;
    background: @red;
    color: @greyBright;
  }

  &:nth-child(3n + 3),
  &:only-child {
    --bg-color: @grey;
    --font-color: @red;
    background: @grey;
    color: @red;
  }

  &:nth-child(3n + 2),
  &:nth-child(3n + 3),
  &:only-child {
    &.sectionNewsletter {
      background-image: url('./newsletter_yellow.svg');
    }
  }

  &.sectionNewsletter.sectionNewsletter {
    background-size: 25em;
    background-repeat: no-repeat;
    background-position: bottom -1px left -1px;
    padding-bottom: 12rem;

    @media (max-width: @breakPointM) {
      background-size: 20rem;
      background-position: bottom -1px left -1px;
      padding-bottom: 10rem;
    }
  }

  &.sectionPledge {
    z-index: 0;
  }
}

.jumpToAnchor {
  position: absolute;
  top: -@headerHeight;
}

.sectionBody {
  max-width: @contentWidthL;
  .contentGrid();
  margin: 0 auto;
  z-index: 1;
}

.inner {
  overflow-wrap: break-word;
  word-wrap: break-word;
  .contentGridSlim();

  > :last-child {
    margin-bottom: 0;
  }

  > :first-child {
    margin-top: 0;
  }

  & + & {
    margin-top: 2rem;

    @media (max-width: @breakPointM) {
      margin-top: 1rem;
    }
  }
}

.innerWide {
  .contentGridMedium();
}

.innerTextHuge {
  @media (min-width: @breakPointM) {
    font-size: @fontSizeL;
  }
}

.sectionBodyNoEvents {
  pointer-events: none;
}

.title {
  font-size: @fontSizeXXL;
  margin-top: 0;
  margin-bottom: 1rem;
  .contentGridSlim();

  @media (max-width: @breakPointM) {
    font-size: @fontSizeL;
    margin-bottom: 0;
  }
}

.illustration {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.youtubeContainer {
  position: relative;
  padding-bottom: 56.25%;
  .contentGridSlim();
  pointer-events: all;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
}

.emailSignup {
  @media (min-width: @breakPointM) {
    font-size: @fontSizeL;
  }
}

.slogan {
  .contentGrid();
  grid-column: 1 / -1;
  position: relative;
  z-index: 1;
  grid-row-gap: 2rem;
  margin: 4rem 0;
  font-size: @fontSizeXXXL;

  @media (max-width: @breakPointM) {
    font-size: @fontSizeL;
  }

  @media (max-width: @breakPointS) {
    font-size: @fontSizeL;
    grid-row-gap: 1rem;
    margin: 5rem 0 7rem;
  }
}

.sloganLine1 {
  grid-column: 3 / -1;
  color: @blueBright;

  @media (max-width: @breakPointM) {
    grid-column-start: 2;
  }

  @media (max-width: @breakPointM) {
    grid-column-start: 2;
  }
}

.sloganLine2 {
  grid-column: 4 / -1;

  @media (max-width: @breakPointM) {
    grid-column-start: 3;
  }

  @media (max-width: @breakPointS) {
    grid-column-start: 1;
  }
}

.sloganLineSignup {
  grid-column: 5 / -3;
  pointer-events: all;
  font-size: @fontSizeM;

  @media (max-width: @breakPointM) {
    grid-column-start: 4;
    grid-column-end: -2;
  }

  @media (max-width: @breakPointS) {
    grid-column-start: 1;
    grid-column-end: -1;
  }
}

.pledge {
  margin-top: 4rem;

  @media (max-width: @breakPointS) {
    margin-top: 1rem;
  }
}

